<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">?unknown_ref: 104000a</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_no_audio_tracks">No Audio Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_text_tracks">No Text Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="Account_Details">Account Details</string>
    <string name="Account_name">Account name</string>
    <string name="ApplicationPreferences">Application Preferences</string>
    <string name="Away">Away</string>
    <string name="Blotter">Friend Activity</string>
    <string name="Busy">Busy</string>
    <string name="Cancel">Cancel</string>
    <string name="Cart">Cart</string>
    <string name="Catalog">Catalog</string>
    <string name="Chat">Chat</string>
    <string name="ChatSendErrorRetry">Could not send, tap to try again</string>
    <string name="Chat_Headline_Message">Never tell your password to anyone.</string>
    <string name="Chat_Load_More_Msgs">Loading earlier messages...</string>
    <string name="Chat_Tap_to_Compose_Hint">Tap to chat</string>
    <string name="Chat_clear_history">Clear Chat History</string>
    <string name="Chats">Recent Chats</string>
    <string name="Community_Caps">COMMUNITY</string>
    <string name="ConfirmationTitle">Steam</string>
    <string name="Confirmations">Confirmations</string>
    <string name="DO_NOT_LOCALIZE_COOKIE_Steam_Language">english</string>
    <string name="Edit">Edit</string>
    <string name="Email_code">Steam Guard code</string>
    <string name="Exit_Application">Exit Application</string>
    <string name="Exit_Caps">EXIT</string>
    <string name="Friend_Activity">Friend Activity</string>
    <string name="Friend_Is_Offline">Friend is Offline</string>
    <string name="Friend_Requests">Friend Requests</string>
    <string name="Friend_Search_All">Search All Players</string>
    <string name="Friends">Friends</string>
    <string name="Group_Invites">Group Invites</string>
    <string name="Group_Num_Members_Online">Online</string>
    <string name="Group_Num_Members_Total">Members</string>
    <string name="Group_Search_All">Search All Groups</string>
    <string name="Groups">Groups</string>
    <string name="In_Game">In-Game</string>
    <string name="Inventory">Inventory</string>
    <string name="LastOnline_DaysAgo">Last Online: # days ago</string>
    <string name="LastOnline_HoursAgo">Last Online: # hours ago</string>
    <string name="LastOnline_MinutesAgo">Last Online: # minutes ago</string>
    <string name="LastOnline_SecondsAgo">Last Online: # seconds ago</string>
    <string name="LastOnline_YearOrMore">Last Online: more than 1 year ago</string>
    <string name="Library">Library</string>
    <string name="Loading">Loading...</string>
    <string name="Logging_Into_Steam">Logging Into Steam...</string>
    <string name="Logging_OutOf_Steam">Logging off...</string>
    <string name="Login">Sign In</string>
    <string name="Login_For_Friends">You must be logged in to use the Steam Community</string>
    <string name="Market_Unavailable">Market is Unavailable</string>
    <string name="My_Profile">My Profile</string>
    <string name="News_Feeds_Caps">NEWS FEEDS</string>
    <string name="Notifications">Notifications</string>
    <string name="Official_Groups">Official Groups</string>
    <string name="Offline">Offline</string>
    <string name="Online">Online</string>
    <string name="Password">password</string>
    <string name="Playing">Playing</string>
    <string name="Private_Groups">Private Groups</string>
    <string name="Profile">Profile</string>
    <string name="Public_Groups">Public Groups</string>
    <string name="Refresh">Refresh</string>
    <string name="Reload">Reload</string>
    <string name="SSA_Agree">By signing in, you agree to the Steam Subscriber Agreement.</string>
    <string name="Search">Search</string>
    <string name="Send">Send</string>
    <string name="chat_is_offline">Chat is Offline</string>
    <string name="steamguard_change_button">Change Settings</string>
    <string name="steamguard_help_button">Help</string>
    <string name="steamguard_scheme_email">Email</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="steamguard_rcode_button">My Recovery Code</string>
</resources>