<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" custom:orientation="vertical" custom:id="@id/splitView_Contents" custom:layout_width="match_parent" custom:layout_height="match_parent"
    <LinearLayout custom:orientation="horizontal" custom:id="@id/twofactor_container" custom:layout_width="match_parent" custom:layout_height="wrap_content">
        <com.valvesoftware.android.steam.community.fragment.TwoFactorCodeListView custom:id="@id/two_factor_code_list_view" custom:layout_width="match_parent" custom:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout custom:orientation="vertical" custom:id="@id/settings_placeholder" custom:layout_width="match_parent" custom:layout_height="match_parent" custom:layout_below="@id/twofactor_container"
        <LinearLayout custom:orientation="vertical" custom:id="@id/steamguard_change_button_container" custom:layout_width="match_parent" custom:layout_height="match_parent">
            <com.valvesoftware.android.steam.community.views.SteamWebButton custom:textColor="@color/settings_steamguard_button_text" custom:id="@id/steamguard_change_button" custom:layout_width="match_parent" custom:layout_height="wrap_content" custom:titleText="@string/steamguard_change_button" custom:detailText="@string/steamguard_scheme_email" custom:topBorder="true" />
            <com.valvesoftware.android.steam.community.views.SteamWebButton custom:textColor="@color/settings_steamguard_button_text" custom:id="@id/steamguard_rcode_button" custom:layout_width="match_parent" custom:layout_height="wrap_content" custom:titleText="@string/steamguard_rcode_button" custom:topBorder="true" />
            <com.valvesoftware.android.steam.community.views.SteamWebButton custom:textColor="@color/settings_steamguard_button_text" custom:id="@id/steamguard_help_button" custom:layout_width="match_parent" custom:layout_height="wrap_content" custom:titleText="@string/steamguard_help_button" custom:topBorder="true" custom:bottomBorder="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
