<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/chat_view_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.valvesoftware.android.steam.community.views.RobotoRegularTextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/chat_is_offline_notice" android:background="#660000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1902" android:text="@string/chat_is_offline" android:singleLine="true" />
    <ListView android:scrollbarStyle="insideInset" android:id="@id/chat_view_contents" android:background="@color/primary_background" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:stackFromBottom="true" android:transcriptMode="alwaysScroll" android:cacheColorHint="@color/primary_background" android:divider="@color/primary_background" android:dividerHeight="0px" android:fillViewport="true" android:layout_weight="1.0" />
    <TextView android:textSize="16sp" android:textStyle="bold" android:ellipsize="end" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/chat_view_status" android:background="#660000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1902" android:text="" android:singleLine="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/chat_say_layout" android:background="@color/chat_text_entry_area_background" android:padding="4dp" android:paddingTop="0dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c02">
        <EditText android:textSize="16sp" android:textColor="@color/primary_foreground" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/chat_view_say_text" android:background="@color/chat_edittext_background" android:paddingLeft="5sp" android:paddingTop="0sp" android:paddingBottom="0sp" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:minHeight="32sp" android:hint="@string/Chat_Tap_to_Compose_Hint" android:maxLines="3" android:singleLine="false" android:maxLength="10000" android:layout_weight="1.0" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:imeOptions="actionSend|actionNext|actionDone|actionPrevious" />
        <Button android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/chat_view_say_button" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x2802" android:text="@string/Send" />
    </LinearLayout>
</LinearLayout>
